<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertSubjectActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Sección del título de la actividad -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <!-- Título de la actividad -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/InsertSubject"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:gravity="center"/>
        </LinearLayout>
        <!-- Sección del campo del nombre de la asignatura -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical">
            <!-- Label de nombre de la asignatura -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:gravity="start"
                android:text="@string/NameSubject"/>
            <!-- Campo del nombre de la asignatura -->
            <EditText
                android:id="@+id/nameSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5sp"
                android:paddingEnd="5sp"
                android:textSize="22sp"
                android:background="@drawable/rounded_rectangle_white"
                android:textColor="@color/black"
                android:gravity="start"
                android:inputType="text" />
        </LinearLayout>
        <!-- Sección del campo de la nota de la asignatura -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical">
            <!-- Label de nota de la asignatura -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:gravity="start"
                android:text="@string/MarkSubject"/>
            <!-- Campo de la nota de la asignatura -->
            <EditText
                android:id="@+id/markSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5sp"
                android:paddingEnd="5sp"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"
                android:textSize="22sp"
                android:background="@drawable/rounded_rectangle_white"
                android:textColor="@color/black"
                android:gravity="start"
                android:inputType="numberDecimal"/>
        </LinearLayout>
        <!-- Sección del botón para insertar la asignatura -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center">
            <!-- Botón para insertar la asignatura -->
            <Button
                android:id="@+id/insertNewSubjectButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:background="@drawable/rounded_rectangle_green"
                android:text="@string/InsertSubject">
            </Button>
        </LinearLayout>
    </LinearLayout>
</ScrollView>